<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_calendar_month"
            android:title="@string/calendar" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_overview"
            android:title="@string/terms"/>

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />

    </group>
</menu>