<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.relit.timemaangement.ui.home.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.relit.timemaangement.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.relit.timemaangement.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.relit.timemaangement.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_slideshow" />
</navigation>