<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginHorizontal="15dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="DateTimeChoosingView">

    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idk_yet"
        app:layout_constraintEnd_toStartOf="@id/change_button"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data_text"
        android:text="@string/idk_yet_short"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/hint_text"
        app:layout_constraintTop_toBottomOf="@id/hint_text"
        app:layout_constraintEnd_toEndOf="@id/hint_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/change_button"
        android:text="@string/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>